--- a/development.mdx
+++ b/development.mdx
@@ -9,7 +9,7 @@ description: 'Preview changes locally to update your docs'
   - A docs repository with a `docs.json` file
 </Info>
 
-Follow these steps to install and run Mintlify on your operating system.
+Follow these steps to install and run Mintlify on your operating system. Test!
 
 <Steps>
 <Step title="Install the Mintlify CLI">
@@ -86,7 +86,7 @@ We suggest using extensions on your IDE to recognize and format MDX. If you're a
   </Accordion>
 
   <Accordion title="Issue: Encountering an unknown error">
-  
+
     Solution: Go to the root of your device and delete the `~/.mintlify` folder. Then run `mint dev` again.
   </Accordion>
 </AccordionGroup>
