fix cancel by date duplicate name

--- a/fields.mdx
+++ b/fields.mdx
@@ -27,7 +27,7 @@ description: Complete list of all contract fields
 | --- | --- | --- |
 | Start Date | `term_start_date` | The calendar date on which the contract begins |
 | End Date | `term_end_date` | The calendar date on which the contract term ends |
-| Cancel By Date | `cancel_by_date` | The date range that determines the date by which a contract needs to be cancelled to avoid automatic renewal, expressed in days |
+| Cancellation Date Range | `cancel_by_date` | The date range that determines the date by which a contract needs to be cancelled to avoid automatic renewal, expressed in days |
 | Cancel By Date | `cancel_date` | The date by which a contract must be cancelled to avoid auto renewal |
 | Execution Date | `execution_date` | The date the contract was signed. In the event that parties signed on different dates, the latter will be identified as the execution date |
 | Subscription Term | `subscription_term` | The length of the contract term |
