Documentation edits made through Mintlify web editor

--- a/user-roles-permissions.mdx
+++ b/user-roles-permissions.mdx
@@ -5,11 +5,11 @@ description: "This document defines the available user roles and what each role 
 
 ## Overview of Roles
 
-| Role | Typical Users | Access Level |
-| :--- | :--- | :--- |
-| **Admin** | Market Data Manager, Procurement Manager, Operations, Legal | Full control over folders, contracts, users, and organization-wide settings. Can edit all contracts. |
-| **Manager** | Team Lead, Executive (CFO/COO), Controller | Can upload and assign contracts. Limited administrative control. |
-| **Viewer** | Stakeholder, Business User | Read-only access. Can view and download contracts. |
+| Role        | Typical Users                                               | Access Level                                                                                         |
+| :---------- | :---------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
+| **Admin**   | Market Data Manager, Procurement Manager, Operations, Legal | Full control over folders, contracts, users, and organization-wide settings. Can edit all contracts. |
+| **Manager** | Team Lead, Executive (CFO/COO), Controller                  | Can upload and assign contracts. Limited administrative control.                                     |
+| **Viewer**  | Stakeholder, Business User                                  | Read-only access. Can view and download contracts.                                                   |
 
 ## Permissions Matrix
 
@@ -19,29 +19,29 @@ The following tables outline specific permissions for each role across different
 
 | Permission                     | Admin | Manager | Viewer |
 | :----------------------------- | :---: | :-----: | :----: |
-| Create / Edit / Delete Folders | ✅    | ❌      | ❌     |
-| View Folders                   | ✅    | ✅      | ✅     |
-| Share Folders                  | ✅    | ❌      | ❌     |
+| Create / Edit / Delete Folders | ✅     | ❌       | ❌      |
+| View Folders                   | ✅     | ✅       | ✅      |
+| Share Folders                  | ✅     | ❌       | ❌      |
 
 ### Contract Management
 
-| Permission                               | Admin | Manager | Viewer |
-| :--------------------------------------- | :---: | :-----: | :----: |
-| Assign / Re-assign Contracts             | ✅    | ✅      | ❌     |
-| Upload Contracts                         | ✅    | ✅      | ❌     |
-| Edit Contracts (Renew, Archive, Fields)  | ✅    | ❌      | ❌     |
-| View Contract Details                    | ✅    | ✅      | ✅     |
-| Download Contract PDF                    | ✅    | ✅      | ✅     |
-| Export CSVs                              | ✅    | ✅      | ✅     |
-| Create / Edit Tags                       | ✅    | ❌      | ❌     |
-| Specify Contract Omissions Clauses       | ✅    | ❌      | ❌     |
-| Specify ICT Providers                    | ✅    | ❌      | ❌     |
+| Permission                              | Admin | Manager | Viewer |
+| :-------------------------------------- | :---: | :-----: | :----: |
+| Assign / Re-assign Contracts            | ✅     | ✅       | ❌      |
+| Upload Contracts                        | ✅     | ✅       | ❌      |
+| Edit Contracts (Renew, Archive, Fields) | ✅     | ❌       | ❌      |
+| View Contract Details                   | ✅     | ✅       | ✅      |
+| Download Contract PDF                   | ✅     | ✅       | ✅      |
+| Export CSVs                             | ✅     | ✅       | ✅      |
+| Create / Edit Tags                      | ✅     | ❌       | ❌      |
+| Specify Contract Omissions Clauses      | ✅     | ❌       | ❌      |
+| Specify ICT Providers                   | ✅     | ❌       | ❌      |
 
 ### User Management
 
 | Permission                     | Admin | Manager | Viewer |
 | :----------------------------- | :---: | :-----: | :----: |
-| Create / Update / Delete Users | ✅    | ❌      | ❌     |
+| Create / Update / Delete Users | ✅     | ❌       | ❌      |
 
 ## Role Definitions
 
@@ -50,6 +50,7 @@ The following tables outline specific permissions for each role across different
 Admins have full administrative control over the organization's setup, users, and contracts.
 
 **Capabilities**
+
 - ✅ Create, edit, and delete folders and contracts
 - ✅ Assign and reassign contracts to users
 - ✅ Edit contracts (edit fields, renew or archive)
@@ -62,10 +63,12 @@ Admins have full administrative control over the organization's setup, users, an
 Managers oversee day-to-day contract operations and can upload, assign, and view contracts but have limited administrative control.
 
 **Capabilities**
+
 - ✅ Upload contracts and assign them to users
 - ✅ View, download, and export contract data
 
 **Restrictions**
+
 - ❌ Cannot manage users
 - ❌ Cannot share folders
 - ❌ Cannot edit existing contracts
@@ -76,10 +79,12 @@ Managers oversee day-to-day contract operations and can upload, assign, and view
 Viewers have access for visibility and reporting only.
 
 **Capabilities**
+
 - ✅ View contract details and folders shared with them
 - ✅ Download contract PDFs and export CSVs
 
 **Restrictions**
+
 - ❌ Cannot upload contracts
 - ❌ Cannot edit contracts
 - ❌ Cannot assign contracts
@@ -89,15 +94,14 @@ Viewers have access for visibility and reporting only.
 
 <AccordionGroup>
   <Accordion title="Can a contract live in multiple folders?">
-    No, a contract can only exist in one folder at a time. If you need to reorganize contracts, you must move them from one folder to another rather than having them appear in multiple folders simultaneously.
+    No, a contract can only exist in one folder at a time. 
   </Accordion>
-
   <Accordion title="When folders are created, who has access to that folder by default?">
     By default, only Admin users have access to newly created folders. Admins must explicitly share folders with other users to grant them access.
   </Accordion>
-
   <Accordion title="Do managers have access to all contracts?">
     No, Managers only have access to:
+
     - Contracts that are specifically assigned to them
     - Contracts that they personally upload
 
